Fixed news feed and updated home page

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -99,22 +99,12 @@
                 <h2>News Feed</h2>
                 <hr class="small">
                 <div class="row">
-                    <div id="widgetmain" style="text-align:left;overflow-y:auto;overflow-x:hidden;
-                            width:1000px;background-color:#transparent; border:1px solid #FFFFFF;">
-                        <div id="rsswidget" style="height:500px;">
-                            <iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1448773457941&amp;
-                            x=http%3A%2F%2Fwww.sk-gaming.com%2Frss%2Fchannel%2Flol&amp;w=1000&amp;h=500&amp;
-                            bc=FFFFFF&amp;bw=1&amp;bgc=transparent&amp;m=100&amp;it=true&amp;t=(default)&amp;
-                            tc=FFFFFF&amp;ts=20&amp;tb=transparent&amp;il=true&amp;lc=0011FF&amp;ls=20&amp;lb=false&amp;
-                            id=true&amp;dc=FFFFFF&amp;ds=18&amp;idt=true&amp;dtc=FFFFFF&amp;dts=18" border="0" hspace="0"                                 vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; 
-                            padding:0; margin:0;width:1000px; height:500px;" id="rssOutput">Reading RSS Feed ...
-                            </iframe>
-                        </div>
-                            <span 
-                                style="font-size:70%"></a>&nbsp;
-                            </span><br>
-                    </div>
-                </div>
+               
+                    
+<iframe  height="500"  width="1000" src="http://feed.mikle.com/widget/?rssmikle_url=http%3A%2F%2Ffeeds.thescoreesports.com%2Flol.rss%7Chttp%3A%2F%2Ffeeds.thescoreesports.com%2Fcsgo.rss%7Chttp%3A%2F%2Ffeeds.thescoreesports.com%2Fhearthstone.rss&rssmikle_frame_width=1000&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=30&sort=Off&rssmikle_title=on&rssmikle_title_sentence=LOL%2C%20CSGO%2C%20HearthStone%20%7C%20RSS%20Feed&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=on&rssmikle_timezone=America%2FLos_Angeles&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=50&rssmikle_item_podcast=off&" scrolling="no" name="rssmikle_frame" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0">
+</iframe><div style="font-size:10px; text-align:center; width:1000px;"></div>
+                  
+               </div>
             </div>
         </div>
     </div>      
@@ -137,7 +127,7 @@
                 <hr class="small">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
-                        <img class="img-portfolio img-responsive" src="images/Profile/vahan.jpg" width="150" height="25">
+                        <img class="img-portfolio img-responsive" src="images/Profile/vahan.jpg" >
                             <h4>
                             <strong>Vahan</strong>
                             </h4>
@@ -151,7 +141,7 @@
                     
                     
                     <div class="col-md-3 col-sm-6">
-                    <img class="img-portfolio img-responsive" src="images/Profile/alexhall.jpg" width="130" height="">
+                    <img class="img-portfolio img-responsive" src="images/Profile/alexhall.jpg">
                             <h4>
                             <strong>Alex</strong>
                             </h4>
@@ -165,7 +155,7 @@
                     
                           
                     <div class="col-md-3 col-sm-6">
-                     <img class="img-portfolio img-responsive" src="images/Profile/bendluzak.jpg" width="200" height="">
+                     <img class="img-portfolio img-responsive" src="images/Profile/bendluzak.jpg">
                             <h4>
                             <strong>Ben</strong>
                             </h4>
@@ -178,7 +168,7 @@
                     </div>
                     
                     <div class="col-md-3 col-sm-6">
-                     <img class="img-portfolio img-responsive" src="images/Profile/philtran.jpg" width="120" height="25">
+                     <img class="img-portfolio img-responsive" src="images/Profile/philtran.jpg">
                             <h4>
                             <strong>Phil</strong>
                             </h4>
@@ -191,7 +181,7 @@
                     </div>
                     
                      <div class="col-md-3 col-sm-6">
-                      <img class="img-portfolio img-responsive" src="images/Profile/davidKnopp.jpg" width="150"height="25">
+                      <img class="img-portfolio img-responsive" src="images/Profile/davidKnopp.jpg">
                             <h4>
                             <strong>David</strong>
                             </h4>
@@ -203,7 +193,7 @@
                             </p>
                     </div>
                      <div class="col-md-3 col-sm-6">
-                        <img class="img-portfolio img-responsive" src="images/Profile/raffi1.jpg" width="300" height="25">
+                        <img class="img-portfolio img-responsive" src="images/Profile/raffi1.jpg">
                             <h4>
                             <strong>Raffi</strong>
                             </h4>
@@ -232,18 +222,25 @@
                 <h2>Games Supported</h2>
                 <hr class="small">
                 <div class="row">
+                    
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <!--a href="#"-->
-                                <img class="img-portfolio img-responsive" src="images/games/lol-logo.png">
-                            </a>
+                            <a href="http://na.leagueoflegends.com/"><img class="img-portfolio img-responsive" img src="images/games/lol-logo.png"/></a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <!--a href="#"-->
-                                <img class="img-portfolio img-responsive" src="images/games/world-of-warcraft-logo.png">
-                            </a>
+                            <a href="http://us.battle.net/wow/en/"><img class="img-portfolio img-responsive" img src="images/games/world-of-warcraft-logo.png"/></a>
+                        </div>
+                    </div>
+                     <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://blog.counter-strike.net/"><img class="img-portfolio img-responsive" img src="images/games/CS-GO-Logo.png"/></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="portfolio-item">
+                            <a href="http://us.battle.net/hearthstone/en/"><img class="img-portfolio img-responsive" img src="images/games/Hearthstone-logo.png"/></a>
                         </div>
                     </div>
                     <!--iv class="col-md-6">
