--- a/src/main/resources/public/app/views/matchmakingLearnMore.html
+++ b/src/main/resources/public/app/views/matchmakingLearnMore.html
@@ -8,7 +8,8 @@
                 <h2 CLASS="text-primary" id="headTab">About Match Making Feature</h2>
                 <hr class="small">
                     <div class="row"> 
-                        <p>This is where the match making feature will go.</p>    
+                        <p>Our Matchmaking feature will connect you with other online players based off of your rank. This will 
+                            allow you to play with other gamers that are at a similar skill level as you!</p>    
                     </div>
                 </center>
         </form>
