--- a/src/main/resources/public/app/views/viewMoreGames.html
+++ b/src/main/resources/public/app/views/viewMoreGames.html
@@ -9,9 +9,10 @@
                 <hr class="small">
                     <div class="row">
                         <p>-<a href="http://na.leagueoflegends.com/">Leauge of Legends</a></p>
-                        <p>-<a href="https://us.battle.net/shop/en/product/world-of-warcraft?-                                                                       &utm_source=Google%20US&utm_medium=Search&utm_content=15674737&utm_campaign
+                        <p>-<a href="https://us.battle.net/shop/en/product/world-of-warcraft?-                                                                                                                                           &utm_source=Google%20US&utm_medium=Search&utm_content=15674737&utm_campaign
                             =LQA_WoW%20Holiday%202015%20Campaign">World Of Warcraft</a></p>
                         <p>-<a href="http://blog.counter-strike.net/">Counter Strike Go</a></p>
+                        <p>-<a href="http://us.battle.net/hearthstone/en/">HearthStone</a></p>
                     </div>
                 </center>
         </form>
