clean up of code and attempt to display json
Cleaning up unncessary code i made and attempted to display the json

--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -1,4 +1,3 @@
-<ng-cloak>
 
         <div>
             <br>
@@ -10,11 +9,12 @@
                 <!--Summoner name here-->
                 <title>Summoner</title>
 
-                <p >{{ info.id }}</p>
-                <p>{{ info.name }}</p>
-                <p>{{ info.profileIconId }}</p>
-                <p>{{ info.summonerLevel }}</p>
-                <p>{{ info.revisionDate }}</p>
+                <p>{{ detail.id }}</png>
+                <p>{{ detail.name }}</p>
+                <p>{{ detail.profileIconId }}</p>
+                <p>{{ detail.summonerLevel }}</p>
+                <p>{{ detail.revisionDate }}</p>
+                <p>somethign3131</p>
             </h1>
             <body>
 
@@ -22,5 +22,3 @@
         </div>
 
     </div>
-
-</ng-cloak>
