--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -6,11 +6,14 @@
 
         <h5>Search for your summoner</h5>
         <!--temp username creditials variable-->
-            <input type="text" ng-model="sumName" value="sumName" class="form-control col-sm-2" placeholder="Summoner Name">
-            <a ng-click="search(sumName)"  class="btn btn-light">Submit</a>
+        <input type="text" ng-model="sumName" value="sumName" class="form-control col-sm-2" placeholder="Summoner Name">
+        <a ng-click="search(sumName)" href="#/summonerPage" class="btn btn-light">Submit</a>
         <br>
-        <p class="text-danger">{{error}}</p>
+        <p class="text-danger">{{error }}</p>
         <br>
+        </div>
+    <div class="container">
+
         <h3>Current Free Champs</h3>
         <div class="row" ng-repeat="data in champData">
             <div class="col-xs-10">
@@ -26,4 +29,5 @@
         </div>
     </div>
 </div>
-    </ng-cloak>
+    <div ng-show></div>
+</ng-cloak>
