Diablo 3 basic page and pulled from a different rss feed.

--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -1,8 +1,8 @@
 .background{
     background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-   }
+    background-size: cover;
+    width: 100%;
+}
 
 html,
 body {
