changing login colors and search colors

--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -10,7 +10,7 @@
         <br>
 
         <h2> Search for <a href=""></a> Summoner</h2>
-        <input type="text" class="basicInput" id="summonerName" name="summonerName" ng-model="summonerName" placeholder="Search for a Summoner">
+        <input id="summonerSearch" type="text" class="basicInput" id="summonerName" name="summonerName" ng-model="summonerName" placeholder="Search for a Summoner">
         <button type="button" ng-click="searchSum(summonerName)" class="btn btn-dark btn-sm">Submit</button>
         <h3>Current Free Champs</h3>
         <div class="row" ng-repeat="data in champData">
