--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -10,6 +10,10 @@ body {
     height: 100%;
 }
 
+#login, #summonerSearch{
+    color: black;
+}
+
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: lightskyblue;
@@ -302,5 +306,3 @@ footer {
 	
 }
 
-
-}
