--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -286,6 +286,9 @@ footer {
     margin-bottom: 10px;
     
 }
+.add-topMargin{
+ margin-top: 15px;   
+}
 .addLargeMargin{
  margin-bottom: 250px;   
 }
