Added character thumbnail and new css for wow

--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -343,8 +343,8 @@ footer {
 }
 
 .gear {
-    width: 500px;
-    color: black;
-    background: ghostwhite;
+     width: 500px;
+    color: white;
+    background: #222;
     margin-top: 30px;
 }
