something about a summary should probably go here

--- a/src/main/resources/public/app/views/worldOfWarcraft.html
+++ b/src/main/resources/public/app/views/worldOfWarcraft.html
@@ -252,7 +252,7 @@
         </br>
         <button type="button" ng-click="characterLookup(realm , characterName)" class="btn btn-dark btn-sm add-topMargin">Character Lookup</button>
     </form>
-    <div class="bg-primary">
+    <div class="gear-wrapper">
         <div class="gear" ng-if='characterInfo'>
             <img src="http://us.battle.net/static-render/us/{{characterInfo.thumbnail}}" alt="Thumbnail" style="margin-bottom:2px" align="left">
             character info found
