--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -1,1 +1,21 @@
-<p>Summoner {{ summonerName }}</p>
+<html>
+
+    <body>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+        <p>Summoner {{ sumInfo.name }}</p>
+        <p>{{sumInfo.id}}</p>
+        <script src="app/controllers/leagueController.js"></script>
+
+    </body>
+
+</html>
+
