--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -11,8 +11,8 @@
         <br>
 
 
-        <p>Summoner {{ sumInfo.name }}</p>
-        <p>{{sumInfo.id}}</p>
+        <p>Summoner {{ data.name }}</p>
+        <p>{{data.id}}</p>
         <script src="app/controllers/leagueController.js"></script>
 
     </body>
