--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -11,10 +11,8 @@
         <br>
 
 
-        <p>Summoner {{ data.name }}</p>
+        <p>Summoner {{ summonerInfo.$$state.eval(summonerName).name }} </p>
         <p>{{data.id}}</p>
-        <script src="app/controllers/leagueController.js"></script>
-
     </body>
 
 </html>
