a little bit of formatting

--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -6,7 +6,9 @@
         <br>
         <br>
         <br>
-        <h2>League of Legends</h2>
+        <div align="center">
+            <img src="images/Games/lol-logo.png">
+        </div>
         <br>
 
         <h2> Search for <a href=""></a> Summoner</h2>
