--- a/src/main/resources/public/app/views/summonerPage.html
+++ b/src/main/resources/public/app/views/summonerPage.html
@@ -1,19 +1,14 @@
-<html>
+<div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    <div align="center">
+        <img src="images/Games/lol-logo.png">
+        </div>
 
-    <body>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-
-        <p>Summoner {{ summonerInfo.$$state.eval(summonerName).name }} </p>
+        <h2>Summoner {{ summonerInfo.$$state.eval(summonerName).name }} </h2>
         <p>{{data.id}}</p>
-    </body>
-
-</html>
+</div>
 
