--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -344,6 +344,7 @@ footer {
 
 .gear {
      width: 500px;
+    display: inline-block;
     color: white;
     background: #222;
     margin-top: 30px;
@@ -357,4 +358,17 @@ footer {
     margin-top: 30px;
     padding: 5px 10px 01px 10px;
      
+}
+.pvp {
+    display:inline-block;
+         width: 500px;
+    color: white;
+    background: #222;
+    margin-top: 30px;
+ border-radius: 20px;
+    
+}
+.thumbnail{
+    height: 84px;
+     width: 84px;
 }
